Correction et ajouts de fonctionnalités v27

--- a/project/app/view/fragment/fragmentDoctolibFooter.html
+++ b/project/app/view/fragment/fragmentDoctolibFooter.html
@@ -1,12 +1,6 @@
-
-<!-- ----- début fragmentCavefooter.html -->
 <p/>
 <hr/>
 <ul>
-  <li>Projet 2023</li>
-  <li>Modifications pour intégrer Bootstrap version 5</li>  
-  <li>UTT, Bonelli Florian et Clément Guinet</li>
+  <li>LO07 2023 | Projet Doctolib | Bonelli Florian et Guinet Clément</li>
 </ul>
 <hr/>
-
-<!-- ----- fin fragmentCavefooter.html -->
